Fixed name autocomplete beeing unreadable

--- a/style.css
+++ b/style.css
@@ -120,4 +120,10 @@ a:visited {
 .bbCodeSpoilerText{
     color: BLACK;
 }
+ul.autoCompleteList li, ul.autoCompleteList li.selected{
+	background-color: #807B7B;
+}
+ul.autoCompleteList li:hover, ul.autoCompleteList li.selected{
+	background-color: #AFAFAF;
+}
 }
